# frost-custody

./: .gitignore  API_CONSISTENCY.md  ARCHITECTURE.md  AWS_KMS_SETUP.md  CEX_INTEGRATION.md  COMPARISON.md  Cargo.toml  DEPLOY.md  DESIGN_DECISION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.softhsm  EXAMPLES.md  FINAL_SUMMARY.md  FROST.md  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  SERVER_SIDE_VALIDATION.md  SESSION_SUMMARY.md  SYSTEM_DESIGN.cn.md  SYSTEM_DESIGN.md  THREE_CURVES.md  config-aws-kms.toml.example  config-node.toml.example  config-pkcs11-npin.toml.example  config-pkcs11.toml.example  config.toml.example  docker-compose.test-24.yml  docker-compose.yml  docker-entrypoint.sh  resume.md  resume.tex  test-nodes.sh
bitcoin/frost-aggregator/: Cargo.toml
bitcoin/frost-aggregator/src/: frost_client.rs  main.rs
bitcoin/frost-service/: Cargo.toml
bitcoin/frost-service/src/: config.rs  main.rs
bitcoin/frost-service/src/address_aggregator/: api.rs  chain_derivation.rs  dkg_orchestrator.rs  mod.rs  multi_chain_api.rs
bitcoin/frost-service/src/common/: frost_client.rs  mod.rs
bitcoin/frost-service/src/curves/: ed25519.rs  mod.rs  secp256k1.rs  secp256k1_ecdsa.rs
bitcoin/frost-service/src/node/: api.rs  config.rs  derivation.rs  dkg_api.rs  dkg_state.rs  main.rs  mod.rs  multi_storage.rs  signer.rs
bitcoin/frost-service/src/signing_aggregator/: api.rs  mod.rs  signing_api.rs
bitcoin/frost-signer/: Cargo.toml  README.md
bitcoin/frost-signer/src/: api.rs  config.rs  derivation.rs
bitcoin/multisig-signer/: Cargo.toml
cex-client/: Cargo.toml  README.md
cex-client/examples/: derive_address.rs  sign_psbt.rs
cex-client/src/: frost_client.rs  lib.rs  psbt.rs  signer_client.rs
client/: Cargo.toml  README.md  derive_address.py
client/examples/: derive_address.rs  sign_eth_frost.rs  sign_psbt.rs  sign_psbt_frost.rs  sign_sol_frost.rs
client/src/: frost_client.rs  lib.rs  signer_client.rs
examples/: client.rs
extension/: .gitignore  Cargo.toml  MILESTONE.md  README.md  background.js  build.sh  index.html  init.js  manifest.json  tailwind.config.js
extension/pkg-bg/: background.d.ts  background.js  background_bg.wasm.d.ts
extension/src/: background.rs  icons.rs  lib.rs  peer_context.rs
extension/src/components/: create_wallet.rs  mod.rs  sign_transaction.rs  wallet_view.rs
extension/src/p2p/: mod.rs  network.rs  protocol.rs
extension/src/services/: frost.rs  mod.rs  storage.rs
frost-aggregator/: Cargo.toml  README.md  aggregator-config.toml.example
frost-aggregator/examples/: frost_aggregator_example.rs  sign_psbt_example.rs
frost-aggregator/src/: api.rs  config.rs  dkg_orchestrator.rs  frost_client.rs  main.rs
frost-service/: CONFIG_HSM.md  Cargo.toml
frost-service/src/: config.rs  main.rs
frost-service/src/address_aggregator/: chain_derivation.rs  dkg_orchestrator.rs  mod.rs  multi_chain_api.rs
frost-service/src/curves/: mod.rs
frost-service/src/node/: crypto.rs  derivation.rs  dkg_api.rs  dkg_state.rs  key_provider.rs  mod.rs  multi_storage.rs  unlock_api.rs
frost-service/src/signing_aggregator/: mod.rs  signing_api.rs
frost-signer/: Cargo.toml  README.md  frost-config.toml.example
frost-signer/examples/: sign_psbt.rs
frost-signer/src/: api.rs  config.rs  crypto.rs  derivation.rs  dkg_state.rs  main.rs  signer.rs  storage.rs
hsm/: README.md  docker-compose.yml  docker-entrypoint.sh
legacy-multisig/: README.md
legacy-multisig/src/: config.rs  main.rs
relay-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
relay-server/src/: main.rs
scripts/: init-softhsm.sh
signer-node/: Cargo.toml  README.md
signer-node/src/: api.rs  signer.rs
src/: api.rs  config.rs  main.rs  signer.rs
tests/: README.md  docker-compose.test.yml
tests/dkg-latency/: Cargo.toml  README.md
tests/dkg-latency/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
