[package]
name = "consensus-ring"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["rapidoc"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "base64"] }
bip39 = "2.0"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true

[[example]]
name = "client"
path = "examples/client.rs"
