[workspace]
members = ["signer-node", "frost-signer", "frost-aggregator", "cex-client"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Consensus Ring Contributors"]
license = "MIT"

[workspace.dependencies]
# Web framework
poem = "3"
poem-openapi = { version = "5", features = ["rapidoc"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "base64"] }
bip39 = "2.0"
base64 = "0.22"

# FROST
frost-secp256k1-tr = "2.0.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
