[package]
name = "frost-custody-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
hex = "0.4"

[features]
default = ["client"]
client = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sha3 = "0.10"
bs58 = "0.5"

[[example]]
name = "derive_address"
path = "examples/derive_address.rs"

[[example]]
name = "sign_psbt"
path = "examples/sign_psbt.rs"

[[example]]
name = "sign_psbt_frost"
path = "examples/sign_psbt_frost.rs"
required-features = ["client"]

[[example]]
name = "sign_eth_frost"
path = "examples/sign_eth_frost.rs"
required-features = ["client"]

[[example]]
name = "sign_sol_frost"
path = "examples/sign_sol_frost.rs"
required-features = ["client"]
