[package]
name = "frost-wallet-extension"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "background"
path = "src/background.rs"
required-features = []

[dependencies]
# Dioxus for UI (only in lib, not in background binary)
dioxus = { version = "0.5", features = ["web"], optional = true }
dioxus-web = { version = "0.5", optional = true }

# FROST MPC
frost-secp256k1-tr = "2.2"
rand = "0.8"

# libp2p for P2P networking - 0.56 (WebSocket for relay + WebRTC for P2P)
libp2p = { version = "0.56", default-features = false, features = [
    "wasm-bindgen",
    "websocket-websys", # WebSocket for WASM (current transport)
    # When PR #5978 merges, add "webrtc-websys" for direct browser-to-browser
    "noise",            # Encryption
    "yamux",            # Multiplexing
    "ping",             # Keep-alive
    "gossipsub",        # P2P messaging over relay
    "identify",         # Peer identification
    "macros",           # NetworkBehaviour derive macro
] }
futures = "0.3"
async-trait = "0.1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    # WebRTC APIs
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSdpType",
    "MessageEvent",
] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Logging
log = "0.4"
wasm-logger = "0.2"

# Time utilities
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["dioxus", "dioxus-web"]

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
panic = "abort"   # Smaller binary
