[package]
name = "frost-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "frost-service"
path = "src/main.rs"

[[bin]]
name = "frost-keygen"
path = "src/bin/keygen.rs"

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitcoin.workspace = true
bip39.workspace = true
base64.workspace = true
miniscript = { version = "12.2", features = ["serde"] }
frost-secp256k1-tr.workspace = true
frost-secp256k1 = "2.0.0"                                        # ECDSA for Ethereum/EVM
rand.workspace = true
rand_chacha = "0.3"
serde_json = "1.0"
hex = "0.4"
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
reqwest = { version = "0.12", features = ["json"] }

# Ethereum support
sha3 = "0.10"
rlp = "0.5"
ethereum-types = "0.14"

# Solana support
frost-ed25519 = "2.0"
bs58 = "0.5"
borsh = "1.5"

# Additional crypto
sha2 = "0.10"
aes-gcm = "0.10"
async-trait = "0.1"

# PKCS#11 / HSM support (optional but default)
cryptoki = { version = "0.6", optional = true }

# AWS KMS support (optional)
aws-config = { version = "1.1", optional = true }
aws-sdk-kms = { version = "1.44", optional = true }

[features]
default = ["pkcs11"]
pkcs11 = ["cryptoki"]
aws-kms = ["aws-config", "aws-sdk-kms"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
