[package]
name = "signer-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "signer-node"
path = "src/main.rs"

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitcoin.workspace = true
bip39.workspace = true
base64.workspace = true
