[package]
name = "frost-aggregator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "frost-aggregator"
path = "src/main.rs"

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitcoin.workspace = true
base64.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "frost_aggregator_example"
path = "examples/frost_aggregator_example.rs"

[[example]]
name = "sign_psbt_example"
path = "examples/sign_psbt_example.rs"
