[package]
name = "frost-signer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "frost-signer"
path = "src/main.rs"

[[bin]]
name = "frost-keygen"
path = "src/bin/keygen.rs"

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bitcoin.workspace = true
bip39.workspace = true
base64.workspace = true
frost-secp256k1-tr.workspace = true
rand.workspace = true
rand_chacha = "0.3"
serde_json = "1.0"
hex = "0.4"
rocksdb = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
