[package]
name = "dkg-latency"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dkg_latency_test"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
reqwest = { version = "0.12", features = ["json"] }
